--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,4 @@
 {
-<<<<<<< HEAD
   "name": "WPLreports",
   "version": "0.0.5",
   "license": "http://polymer.github.io/LICENSE.txt",
@@ -10,7 +9,7 @@
     "paper-elements": "PolymerElements/paper-elements#^1.0.1",
     "platinum-elements": "PolymerElements/platinum-elements#^1.1.0",
     "neon-elements": "PolymerElements/neon-elements#^1.0.0",
-    "page": "visionmedia/page.js#~1.6.3"
+    "page": "visionmedia/page.js#~1.6.3",
     "jquery": "~2.1.4",
     "paper-date-picker": "bendavis78/paper-date-picker#~1.0.2",
     "file-upload": "~1.3.2"
