--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "WPLreports",
   "version": "0.0.5",
   "license": "http://polymer.github.io/LICENSE.txt",
-  "private":true,
+  "private": true,
   "dependencies": {
     "polymer": "Polymer/polymer#^1.1.0",
     "iron-elements": "PolymerElements/iron-elements#^1.0.0",
@@ -12,7 +12,8 @@
     "page": "visionmedia/page.js#~1.6.3",
     "jquery": "~2.1.4",
     "paper-date-picker": "bendavis78/paper-date-picker#~1.0.2",
-    "file-upload": "~1.3.2"
+    "file-upload": "~1.3.2",
+    "simple-material-table": "wintersandroid/material-table#~0.5.0"
   },
   "devDependencies": {
     "web-component-tester": "*",
